[gd_scene load_steps=19 format=3 uid="uid://h1l0yao8nbnx"]

[ext_resource type="Script" path="res://Enemies/Slime.gd" id="1_4w6m5"]
[ext_resource type="Texture2D" uid="uid://xtydmmoumoqf" path="res://Spritesheets/Slime.png" id="1_l7evy"]
[ext_resource type="PackedScene" uid="uid://ciy7yybq81x1d" path="res://Enemies/PlayerDetectionZone.tscn" id="2_dhy54"]
[ext_resource type="Texture2D" uid="uid://dbyu0limsp0ro" path="res://Spritesheets/Shadows/SlimeShadow.png" id="2_i6rqm"]
[ext_resource type="PackedScene" uid="uid://dhbpixstclenc" path="res://Enemies/stats.tscn" id="2_v6ec8"]
[ext_resource type="PackedScene" uid="uid://bgcc15iqoqqqk" path="res://hboxes/hurtbox.tscn" id="4_ke0ke"]
[ext_resource type="PackedScene" uid="uid://cc8tkykwq1d83" path="res://hboxes/hitbox.tscn" id="6_xmm4r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_umge1"]
radius = 81.2219

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oijvy"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5criv"]
radius = 8.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_poxsu"]
radius = 13.0
height = 34.0

[sub_resource type="Animation" id="Animation_0jjbh"]
resource_name = "Alert"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_alert"
}]
}

[sub_resource type="Animation" id="Animation_kkior"]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_fp53r"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 3, 4, 5, 6, 2, 3, 4, 5, 6, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_c1bls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ocq1d"]
resource_name = "RunLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_h2lfr"]
resource_name = "RunRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0l5ms"]
_data = {
"Alert": SubResource("Animation_0jjbh"),
"Death": SubResource("Animation_kkior"),
"Idle": SubResource("Animation_fp53r"),
"RESET": SubResource("Animation_c1bls"),
"RunLeft": SubResource("Animation_ocq1d"),
"RunRight": SubResource("Animation_h2lfr")
}

[node name="Slime" type="CharacterBody2D"]
position = Vector2(0, -5)
collision_layer = 33
script = ExtResource("1_4w6m5")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("2_dhy54")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.235294)
shape = SubResource("CircleShape2D_umge1")

[node name="Stats" parent="." instance=ExtResource("2_v6ec8")]
maxHealth = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oijvy")

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -2)
texture = ExtResource("2_i6rqm")

[node name="SlimeBody" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
texture = ExtResource("1_l7evy")
hframes = 39

[node name="Hitbox" parent="." instance=ExtResource("6_xmm4r")]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5criv")

[node name="Hurtbox" parent="." instance=ExtResource("4_ke0ke")]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_poxsu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0l5ms")
}

[node name="HealthLabel" type="Label" parent="."]
offset_left = -5.0
offset_top = -41.0
offset_right = 35.0
offset_bottom = -15.0

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="Hurtbox"]
